--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-    "version":2,
-    "builds":[
-        {"src":"*.js", "use":"@vercel/node"}
-    ],
-    "routes":[
+    "version": 2,
+    "builds": [
         {
-            "src":"/(.*)",
-            "dest":"/"
+            "src": "index.js", 
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/index.js" 
         }
     ]
 }
